Added resource strings for distance_title and distance_placeholder

--- a/storeapp/app/src/main/res/values/strings.xml
+++ b/storeapp/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Amazot Go</string>
+    <string name="distance_title">Current Distance:</string>
+    <string name="distance_placeholder">0 cm</string>
 </resources>
