--- a/storeapp/app/src/main/res/values/strings.xml
+++ b/storeapp/app/src/main/res/values/strings.xml
@@ -87,4 +87,8 @@
 
     <string name="id_fmt">User ID: %s</string>
     <string name="email_fmt">Email: %s</string>
+    <string name="title_activity_main2">Main2Activity</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
 </resources>
