--- a/storeapp/app/src/main/res/values/strings.xml
+++ b/storeapp/app/src/main/res/values/strings.xml
@@ -88,7 +88,7 @@
     <string name="id_fmt">User ID: %s</string>
     <string name="email_fmt">Email: %s</string>
     <string name="title_activity_main2">Main2Activity</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_store">Store</string>
+    <string name="title_transactions">Transactions</string>
+    <string name="title_account">Account</string>
 </resources>
