--- a/storeapp/app/src/main/res/values/strings.xml
+++ b/storeapp/app/src/main/res/values/strings.xml
@@ -95,4 +95,6 @@
     <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
     <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
     <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
+    <string name="capture">Capture</string>
+    <string name="face_pic">Face Pic</string>
 </resources>
